<resources>
    <string name="app_name">无线吊机</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">用户</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_loging">正在登录,请稍后...</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">密码不能为空</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">用户名不能为空</string>
    <string name="error_field_aqh">机构不能为空</string>
    <string name="error_null_location">非法悬空位置</string>
    <string name="error_rm_location">该位置不推荐放箱</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title">装卸船任务列表</string>
    <string name="zxboat">装卸船</string>
    <string name="zxcar">装卸车</string>
    <string name="chaochang">堆场抄场</string>
    <string name="cancleBox">取消提箱</string>
    <string name="history">历史记录</string>
    <string name="search_location">搜索箱子</string>
    <string name="zlCellBox">箱区整理</string>
    <string name="menu_qhzh">切换账户</string>
    <string name="menu_setting">设置</string>
    <string name="menu_qhcd">切换街区</string>
    <string name="menu_exit">退出终端</string>
    <string name="cd">街区: %s</string>
    <string name="tw">贝位: %s</string>
    <string name="rztc">入闸放箱: %s</string>
    <string name="cztc">出闸提箱: %s</string>
    <string name="currentTask">当前任务:%s</string>
    <string name="alert">警告</string>
    <string name="confimToast">温馨提示</string>
    <string name="inputBox">温馨提示</string>
    <string name="input_toast">请输入箱号后4位</string>
    <string name="input_err_toast">请输入长度不少于4位箱号</string>
    <string name="select_search_box">请选择箱子</string>
    <string name="select_stack">请选择街区</string>
    <string name="select_bay">请选择贝位</string>
    <string name="fall_box">倒箱</string>
    <string name="cancel_box">取消提箱</string>
    <string name="refresh">刷新</string>
    <string name="confim">确认</string>
    <string name="exit">退出</string>
    <string name="cancle">取消</string>
    <string name="details">详情</string>
    <string name="progress_msg">小君正在努力处理中...</string>
    <string name="netword_error">网络连接异常，请检测是否开启网络...</string>
    <string name="cc_cd_error">请先选择街区与贝位。</string>
    <string name="cc_clear_error">该箱子是正常场的集装箱,是否继续?</string>
    <string name="cc_clear_cd_error">是否执行抄场功能"\"清空该街区所有箱子"\"!!!</string>
    <string name="cc_select_error">悬空非法位置,请重新选择。</string>
    <string name="cc_select_has_error">该位置已有箱子,请重新选择。</string>
    <string name="putBoxFormat">卸箱</string>
    <string name="getBoxFormat">提箱</string>
    <string name="pjBoxFormat">倒箱</string>
    <string name="boatName">船名</string>
    <string name="jkhc">进口航次</string>
    <string name="ckhc">出口航次</string>
    <string name="zx">装卸</string>
    <string name="boxCount">箱数</string>
    <string name="hc">航次</string>
    <string name="row">排</string>
    <string name="tier">层</string>
    <string name="carNum">车号</string>
    <string name="boxNum">箱号</string>
    <string name="boxLocation">位置</string>
    <string name="isBoxLocation">在场位置</string>
    <string name="boxDt">动态</string>
    <string name="boxType">箱型</string>
    <string name="boxWeiht">空重</string>
    <string name="boxOwn">持箱人</string>
    <string name="boxAllWeiht">总重</string>
    <string name="inSwTime">等待时间</string>
    <string name="workLine">工作线</string>
    <string name="boxName">货名</string>
    <string name="boxhmhc">航名航次</string>
    <string name="isExist">在场标示</string>
    <string name="cell_and_tier">排层</string>
    <string name="error_msg">位置跟箱型不匹配</string>
    <string name="error_msg1">箱子被压住了，请重新选择！</string>
    <string name="error_no_box">请先选择任务!</string>
    <string name="toast_dxw">确认要把箱子"%s"移到倒箱位吗?</string>
    <string name="recommend_location">推荐</string>
    <string name="dxw_name">倒箱位</string>
    <string name="title_activity_settings">系统设置</string>
    <string name="rm_box">倒</string>
    <string name="is_waiting">车</string>
    <string name="change_box">换</string>
    <string name="occupy">该位置已被占用</string>
    <string name="dock">码头:</string>
    <string name="majloc">主区:</string>
    <string name="subloc">分区:</string>
    <string name="url">服务地址:</string>
    <string name="field">街区</string>
    <string name="rown">田位</string>
    <string name="clear_field">抄场</string>
    <string name="rmd_bay_field">倒箱贝位</string>
    <string name="checked_box">选中的箱</string>
    <string name="move_box_position">移箱目标位置</string>
    <string name="target_box">目标提箱</string>
    <string name="can_exchange_task">任务相同的箱</string>
    <string name="wait_work">待作业箱</string>
    <string name="recommended_bit">推荐位</string>
    <string name="not_accord_with_rule">不符合规则</string>
    <string name="text_color">字体颜色</string>
    <string name="box_message">箱信息</string>
    <string name="check_box">选中的箱</string>
    <string name="task_same_box">任务相同的箱</string>
    <string name="has_task">已分配任务的箱（当前工作列表内）</string>
    <string name="wait_task">待作业箱</string>
    <string name="background_color">背景色</string>
    <string name="exit_or_transfer_box">出口箱或中转箱（规则：同船、同航次、同卸货港，同重量等级）</string>
    <string name="empty_box">空箱（规则：同持箱人、同箱型）</string>
    <string name="manual_fall_box">手动倒箱（规则：策划田位内倒箱）</string>
    <string name="exit_or_transfer_box2">出口箱或中转箱（规则：同船、同航次、同卸货港；重量轻）</string>
    <string name="empty_box2">空箱（规则：排放箱的层为空箱）</string>
    <string name="exit_or_transfer_box3">出口箱或中转箱（规则：同船、同航次、同卸货港；轻压重）</string>
    <string name="exit_or_transfer_box4">出口箱或中转箱（规则：不同船、不同航次）</string>
    <string name="exit_or_transfer_box5">出口箱或中转箱（规则：不同卸货港）</string>
    <string name="empty_box3">空箱（规则：不同持箱人）</string>
    <string name="empty_box4">空箱（规则：不同箱型）</string>
    <string name="not_fit_rule">不适合堆场策划的规则</string>
    <string name="error_rm_msg">提箱不能换街区倒箱</string>
    <string name="rm_color_switch">*,RM_LOC_FREE,RFCWS</string>
    <string name="open_stack_list_switch">*,ShowStackList</string>
    <string name="open_rm_switch">*,ShowRMCntr</string>
    <string name="open_rm_stack_switch">*,ShowStackRMCntr</string>
    <string name="search_cntr_count">*,SEARCH_CNTR_COUNT</string>
    <string name="open_cc_switch">*,ShowYardCheck</string>
    <string name="automatic_discharge">*,AUTOMATIC_DISCHARGE</string>
    <string name="show_custom_bg">*,ShowCustomBg</string>
    <string name="history_query">查询</string>
    <string name="history_machine">机械</string>
    <string name="history_work">工班</string>
    <string name="history_work_no">工号</string>
    <string name="history_driver">司机名</string>
    <string name="history_20_small_box">20小箱</string>
    <string name="history_40_big_box">40大箱</string>
    <string name="android_auto_update_notify_content">发现新版本,点击进行升级</string>
    <string name="android_auto_update_dialog_btn_download">立即下载</string>
    <string name="android_auto_update_dialog_btn_cancel">以后再说</string>
    <string name="android_auto_update_download_progress">正在下载:%1$d%%</string>
    <string name="android_auto_update_dialog_checking">正在检查版本</string>
    <string name="version_code">V</string>
    <string name="down_loading">正在下载版本..."</string>
    <string name="organization">机构</string>
    <string name="crane_number">吊机号</string>
    <string name="save">保存</string>
    <string name="number">数量</string>
    <string name="state">状态</string>
    <string name="workplace">当前贝位</string>
    <string name="start_the_field">开始田位</string>
    <string name="end_the_field">结束田位</string>
    <string name="starting_time">起始时间</string>
    <string name="ending_time">结束时间</string>
    <string name="loading_unloading_vessel_vehicle">装卸船/车</string>
    <string name="loading_and_unloading_vessel">装卸船</string>
    <string name="shipment">装船</string>
    <string name="ship_unload">卸船</string>
    <string name="loading_and_unloading_truck">装卸车</string>
    <string name="cancellation_of_suitcases">取消提箱</string>
    <string name="inverted_box">倒箱</string>
    <string name="empty_heavy_box">空/重箱</string>
    <string name="loaded_containers">重箱</string>
    <string name="empty_container">空箱</string>
    <string name="unloading_suitcase">卸/提箱</string>
    <string name="unloading_box">卸箱</string>
    <string name="suitcase">提箱</string>
    <string name="the_trailer_and_box_number_are_three_places_behind">拖车、箱号后3位.</string>
    <string name="welcome">欢迎 </string>
    <string name="crane">吊机 </string>
    <string name="internal">内提</string>
    <string name="internal_discharge">内放</string>
    <string name="arrangement">整理</string>
    <string name="do_you_want_to_switch_accounts">是否要切换账户?</string>
    <string name="loading">正在处理...</string>
    <string name="configuration_wharf">配置码头</string>
    <string name="parameter_settings">参数设置</string>
    <string name="do_you_want_to_save_settings">是否要保存设置</string>
    <string name="tips">提示</string>
    <string name="iollegal_equipment">非法设备</string>
    <string name="not_registered">您的设备未登记,请联系管理员处理.</string>
    <string name="boxes_are_irreplaceable">箱子不可换箱.</string>
    <string name="the_box_is_illega">箱子不合法.</string>
    <string name="please_choose_the_venue">您还没选择街区,请选择.</string>
    <string name="site_list">街区列表</string>
    <string name="please_enter_the_time">请输入时间</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="has_box_feeding_operation">该拖车有送箱操作请先送箱进场，再做提箱.</string>
    <string name="make_sure_you_want_the_box">确认要把箱子: </string>
    <string name="move_to_the_reverse_bin"> 移到倒箱位吗？</string>
    <string name="the_box_was_pressed_down">箱子被压住了.</string>
    <string name="refrigerator_has_not_been_unplugged">冷藏箱还没拔电.</string>
    <string name="put_on">放在:</string>
    <string name="on">上吗?</string>
    <string name="failure_to_meet_exchange_box_conditions">不符合交换箱子条件</string>
    <string name="there_is_a_pressure_box_on_it">上面有压箱.</string>
    <string name="failure_please_try_again">失败,请重试...</string>
    <string name="the_size_of_the_box_does_not_match_the_size_of_the_car">箱型与车型大小不符合.</string>
    <string name="main_area">主区</string>
    <string name="partition">分区</string>
    <string name="wharf">码头</string>
    <string name="the_maximum_layer_is_empty">最大层为空.</string>
    <string name="the_floor_is_full">层已满.</string>
    <string name="please_select_box_info">您还没有选择箱子信息.</string>
    <string name="failure_to_verify_suitcase">验证提箱失败.</string>
    <string name="the_site_has_been_locked_up">该街区已被锁住.</string>
    <string name="heavy_boxes_press_empty_boxes">重箱压空箱，是否继续放箱？</string>
    <string name="go_on">继续</string>
    <string name="the_validation_failed">验证失败,验证码无效.</string>
    <string name="is_exit">是否要退出?</string>
    <string name="is_cancel">是否要取消</string>
    <string name="get_data_failure">获取数据失败.</string>
    <string name="to">至</string>
    <string name="empty">空</string>
    <string name="full">重</string>
    <string name="confirmation_of_exchange_boxes">确认交换箱子</string>
    <string name="take_it_away">提走？</string>
    <string name="search_not_the_box">找不到该箱子,请重新输入.</string>
    <string name="select_time">选择时间</string>
    <string name="suitcase_failure">提箱失败.</string>
    <string name="back">返回</string>
    <string name="network_error">网络连接超时异常,请稍后重试.</string>
    <string name="network_exception">网络异常，请检查网络是否连接.</string>
    <string name="the_box_does_not_conform_to_the_exchange_suitcase">该箱不符合交换提箱.</string>
    <string name="please_input">请输入</string>
    <string name="number_cntr">位箱号</string>
    <string name="please_enter_the_verification_code">请输入验证码</string>
    <string name="pod">目的港</string>
    <string name="eqp_cond">残损</string>
</resources>