<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contentLayout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_content_height"
    android:background="@drawable/recy_item_press"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/num"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.05"
        android:text="@string/carNum" />

    <TextView
        android:id="@+id/boxNum"
        style="@style/contentTextViewStyle"
        android:layout_weight="1"
        android:text="@string/boxNum" />

    <TextView
        android:id="@+id/boxLocation"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.1"
        android:text="@string/boxLocation" />

    <TextView
        android:id="@+id/tvCell"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.12"
        android:text="@string/row" />

    <TextView
        android:id="@+id/tvTier"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.12"
        android:text="@string/tier" />

    <TextView
        android:id="@+id/boxType"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.1"
        android:text="@string/boxType" />

    <TextView
        android:id="@+id/workLine"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.08"
        android:text="@string/workLine" />
    <TextView
        android:id="@+id/tvPOD"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.08"
        android:text="@string/pod" />
    <TextView
        android:id="@+id/tvEqpCond"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.1"
        android:text="@string/eqp_cond" />

    <TextView
        android:id="@+id/boxOwn"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.08"
        android:text="@string/boxOwn" />

    <TextView
        android:id="@+id/boxWeight"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.1"
        android:text="@string/boxWeiht" />

    <TextView
        android:id="@+id/boxDt"
        style="@style/contentTextViewStyle"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:text="@string/boxDt" />

    <TextView
        android:id="@+id/inSwTime"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.05"
        android:text="16/09/16 14:20" />

    <TextView
        android:id="@+id/boxName"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.1"
        android:text="@string/boxName" />

    <TextView
        android:id="@+id/boxALlWeight"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.05"
        android:text="@string/boxAllWeiht" />

    <TextView
        android:id="@+id/boxHmhc"
        style="@style/contentTextViewStyle"
        android:layout_weight="0.9"
        android:text="@string/boxhmhc" />
</LinearLayout>
