<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

    <TextView
        style="@style/tableTextViewStyle"
        android:layout_weight="1.05"
        android:text="@string/field"
        android:textSize="@dimen/textsize18"/>

    <TextView
        style="@style/tableTextViewStyle"
        android:layout_weight="1.1"
        android:text="@string/number"
        android:textSize="@dimen/textsize18"/>

    <TextView
        style="@style/tableTextViewStyle"
        android:layout_weight="1.1"
        android:text="@string/state"
        android:visibility="gone"
        android:textSize="@dimen/textsize18"/>

    <TextView
        style="@style/tableTextViewStyle"
        android:layout_weight="1.05"
        android:text="@string/workplace"
        android:textSize="@dimen/textsize18"/>

    <TextView
        style="@style/tableTextViewStyle"
        android:layout_weight="1.05"
        android:text="@string/start_the_field"
        android:visibility="gone"
        android:textSize="@dimen/textsize18"/>


    <TextView
        style="@style/tableTextViewStyle"
        android:layout_weight="1.05"
        android:text="@string/end_the_field"
        android:visibility="gone"
        android:textSize="@dimen/textsize18"/>

    <TextView
        style="@style/tableTextViewStyle"
        android:layout_weight="0.9"
        android:text="@string/starting_time"
        android:textSize="@dimen/textsize18"/>
    <TextView
        style="@style/tableTextViewStyle"
        android:layout_weight="0.9"
        android:text="@string/ending_time"
        android:textSize="@dimen/textsize18"/>
</LinearLayout>