<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/recy_item_press"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/stack_item"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.05"
        android:text="@string/field"
        android:textSize="@dimen/textsize18" />

    <TextView
        android:id="@+id/item_count"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.1"
        android:text="@string/number"
        android:textSize="@dimen/textsize18" />

    <TextView
        android:id="@+id/state"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.1"
        android:text="@string/state"
        android:textSize="@dimen/textsize18" />

    <TextView
        android:id="@+id/fpBay"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.05"
        android:text="@string/workplace"
        android:textSize="@dimen/textsize18" />

    <TextView
        android:id="@+id/startBay"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.05"
        android:text="@string/start_the_field"
        android:textSize="@dimen/textsize18" />


    <TextView
        android:id="@+id/endBay"
        style="@style/contentTextViewStyle"
        android:layout_weight="1.05"
        android:text="@string/end_the_field"
        android:textSize="@dimen/textsize18" />

    <TextView
        android:id="@+id/startTime"
        style="@style/contentTextViewStyle"
        android:layout_weight="0.9"
        android:text="@string/starting_time"
        android:textSize="@dimen/textsize18" />

    <TextView
        android:id="@+id/endTime"
        style="@style/contentTextViewStyle"
        android:layout_weight="0.9"
        android:text="@string/ending_time"
        android:textSize="@dimen/textsize18" />
</LinearLayout>

