<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/boxNum"
        style="@style/tableTextViewStyle"
        android:layout_weight="1"
        android:text="@string/boxNum" />

    <TextView
        android:id="@+id/boxType"
        style="@style/tableTextViewStyle"
        android:layout_weight="1.2"
        android:text="@string/boxType" />

    <TextView
        android:id="@+id/boxLocation"
        style="@style/tableTextViewStyle"
        android:layout_weight="1.2"
        android:text="@string/isBoxLocation" />

    <TextView
        android:id="@+id/opr"
        style="@style/tableTextViewStyle"
        android:layout_weight="1.2"
        android:text="@string/boxOwn" />
    <TextView
        android:id="@+id/isExist"
        style="@style/tableTextViewStyle"
        android:layout_weight="1.2"
        android:visibility="gone"
        android:text="@string/isExist" />

    <TextView
        android:id="@+id/tvCT"
        style="@style/tableTextViewStyle"
        android:layout_weight="1.2"
        android:visibility="gone"
        android:text="@string/cell_and_tier" />

</LinearLayout>
