<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <TextView
       android:id="@+id/boatName"
        style="@style/tableTextViewStyle"
        android:background="@android:color/white"
        android:text="@string/boatName"
        android:textColor="@android:color/black"
        android:layout_weight="1"
        />
    <TextView
        android:id="@+id/jkhc"
        style="@style/tableTextViewStyle"
        android:background="@android:color/white"
        android:text="@string/jkhc"
        android:textColor="@android:color/black"
        android:layout_weight="1"
        />
    <TextView
        android:id="@+id/zx"
        style="@style/tableTextViewStyle"
        android:background="@android:color/white"
        android:text="@string/zx"
        android:textColor="@android:color/black"
        android:layout_weight="1"
        />
  </LinearLayout>
  <include layout="@layout/recycleview_layout"></include>

</LinearLayout>
